--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 	
 </head>
 <body>
-	<div class="container">
-		<h1>Boilerplate Service Worker</h1>
-
-		<p>Below is an image of Earth from NASA</p>
-
-		<p><img src="" alt="Image of Earth from Nasa" class="targetImage"></p>		
-	</div>
+	<h1>Test Ping 1</h1>
     <script src="js/app.js"></script>
 </body>
 </html>
