--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 <head>
-	<meta charset="utf-8">
-	<title>Boilerplate Service Worker</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta name="description" content="E-Commerce Website">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta content="#FFEB3B" name="theme-color">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes"> 
+<meta name="apple-mobile-web-app-status-bar-style" content="red">
+<meta name="apple-mobile-web-app-title" content="Maxi Komputer">
+<title>Home | Maxi Komputer</title>
+
+<!-- Icon for Apple Device -->
+<link rel="apple-touch-icon" href="/images/apple_icons/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="images/apple_icons/touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple_icons/touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="167x167" href="images/apple_icons/touch-icon-ipad-retina.png">
+<link rel="manifest" href="manifest.json">
 	
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
@@ -11,7 +27,7 @@
 	
 </head>
 <body>
-	<h1>Test Ping 1</h1>
+	<h1>Test Ping 2</h1>
     <script src="js/app.js"></script>
 </body>
 </html>
