--- a/index.html
+++ b/index.html
@@ -21,13 +21,27 @@
 <link rel="apple-touch-icon" sizes="167x167" href="images/apple_icons/touch-icon-ipad-retina.png">
 <link rel="manifest" href="manifest.json">
 	
-	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
+<script src="js/uikit.js" type="text/javascript"></script>
+<script src="js/uikit-icons.js" type="text/javascript"></script>
+<script src="js/JQuery3.3.1.js" type="text/javascript"></script>
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/lightslider.css">
+<link rel="stylesheet" href="css/reset.css">
+
 	
 </head>
 <body>
-	<h1>Test Ping 2</h1>
-    <script src="js/app.js"></script>
+    <h1>Test Ping 3</h1>
+    
+<script src="js/app.js"></script>
+<!-- Start Angular JS -->
+<script src="js/angular.min.js" type="text/javascript"></script>
+<script src="js/controller.js" type="text/javascript"></script>
+<!-- End Angular JS -->
+<script src="js/script.js" type="text/javascript"></script>
+<script src="js/lightslider.js" type="text/javascript"></script>
+<script src="js/slider.js"></script>
 </body>
 </html>
