--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         <!-- start ng-repeat Catalog dan Sub Catalog-->
                                         <li ng-repeat='ctl in catalog'>
                                             <div class="uk-margin-top uk-margin-bottom">
-                                                <a class="uk-link-reset" href="{{ctl.link0}}.html"><img class="uk-display-block uk-margin-auto uk-margin-bottom" src="images/catalog/{{ctl.src}}.svg" alt="{{ctl.alt}}" width="80" height="80">
+                                                <a class="uk-link-reset" href="{{ctl.link0}}.html"><img class="uk-display-block uk-margin-auto uk-margin-bottom" src="{{ctl.src}}" alt="{{ctl.alt}}" width="80" height="80">
                                                 <div class="uk-text-bolder">{{ctl.title}}</div>
                                                 </a>
                                                 <ul class="uk-nav uk-nav-default">
