--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                     <!-- start ng-repeat Marketplace -->
                     <li ng-repeat='mp in marketplace'>
                         <div class="uk-grid-small uk-flex-center uk-flex-left@s" uk-grid>
-                            <div style="width: 80px;">
+                            <div class="mkt">
                                 <a class="uk-link-muted tm-media-box" href="#" title="{{mp.title}}"><img src="images/marketplaces/{{mp.src}}.svg" alt="{{mp.alt}}"></a>
                             </div>
                             <div class="uk-text-center uk-text-left@s uk-width-expand@s">
