--- a/index.html
+++ b/index.html
@@ -798,7 +798,10 @@
                     <div class="uk-grid-small uk-flex-center" uk-grid>
                         <div class="uk-width-1-1 uk-width-medium@s">
                             <div class="uk-inline uk-width-1-1">
-                                <span class="uk-form-icon" uk-icon="mail"></span><input class="uk-input" type="email" placeholder="Your email" required></div>
+								<span class="uk-form-icon" uk-icon="mail"></span>
+								<input id="subcribe" class="uk-input" type="email" placeholder="Your email" required>
+								<label for="subcribe">{{}}</label>
+							</div>
                         </div>
                         <div>
                             <button class="uk-button uk-button-primary">subscribe</button>
