--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script src="js/uikit-icons.js" type="text/javascript"></script>
 <script src="js/JQuery3.3.1.js" type="text/javascript"></script>
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/lightslider.css">
 
@@ -800,7 +800,7 @@
                             <div class="uk-inline uk-width-1-1">
 								<span class="uk-form-icon" uk-icon="mail"></span>
 								<input id="subcribe" class="uk-input" type="email" placeholder="Your email" required>
-								<label for="subcribe">{{}}</label>
+								<label for="subcribe"></label>
 							</div>
                         </div>
                         <div>
