--- a/index.html
+++ b/index.html
@@ -787,7 +787,8 @@
                 </section>
             </div>
         </div>
-        </section><section class="uk-section uk-section-primary uk-section-small uk-light">
+		</section>
+		<section class="uk-section uk-section-primary uk-section-small uk-light">
         <div class="uk-container">
             <div class="uk-text-center">
                 <div class="uk-h2 uk-margin-remove">Subscribe for updates</div>
