--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="uk-padding-small uk-margin-remove" uk-dropdown="pos: bottom-right; offset: -10; delay-hide: 200;" style="min-width: 150px;">
                         <ul class="uk-nav uk-dropdown-nav">
                             <li>
-                                <a><span style="font-weight: 700;">Welcome,</span><br>
+                                <a><span style="font-weight: 700; color: #ce071e;">Welcome,</span><br>
                                     Please login to start Shopping!
                                 </a>
                             </li>
