--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="uk-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <button class="uk-navbar-toggle uk-hidden@m" uk-toggle="target: #nav-offcanvas" uk-navbar-toggle-icon></button>
-                    <a class="uk-navbar-item uk-logo" href="index-2.html"><img src="images/logo.svg" width="100" height="32" alt="Logo"></a>
+                    <a class="uk-navbar-item uk-logo" href="home.html"><img src="images/logo.svg" width="100" height="32" alt="Logo"></a>
                     <nav class="uk-visible@m">
                     <ul class="uk-navbar-nav">
                         <li>
@@ -841,7 +841,7 @@
         <div class="uk-container">
             <div class="uk-grid-medium uk-child-width-1-1 uk-child-width-1-4@m" uk-grid>
                 <div>
-                    <a class="uk-logo" href="index-2.html"><img src="images/logo-inverse.svg" width="100" alt="Logo"></a>
+                    <a class="uk-logo" href="home.html"><img src="images/logo-inverse.svg" width="100" alt="Logo"></a>
                     <p class="uk-text-small" style="text-align: justify;">
                         {{deskripsi}}
                     </p>
