--- a/home.html
+++ b/home.html
@@ -919,7 +919,7 @@
 					</label>
 				</form>
 				<div class="uk-margin uk-text-small uk-text-muted">
-					Shopping Categories icons by Jaro Sigrist from Noun Project
+					Hanya disini peripheral dan accessories termurah se-Jogja!
 				</div>
 			</div>
 		</div>
