--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
 <script src="js/uikit.js" type="text/javascript"></script>
 <script src="js/uikit-icons.js" type="text/javascript"></script>
-<script src="js/JQuery3.3.1.js" type="text/javascript"></script>
+<script src="js/jquery-3.5.0.min.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 <link rel="stylesheet" href="css/style.css">
