--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 <script src="js/uikit.js" type="text/javascript"></script>
 <script src="js/uikit-icons.js" type="text/javascript"></script>
-<script src="js/jquery-3.5.0.min.js" type="text/javascript"></script>
+<script src="js/jquery-3.5.0.slim.min.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/lightslider.css">
