--- a/index.html
+++ b/index.html
@@ -799,8 +799,7 @@
                         <div class="uk-width-1-1 uk-width-medium@s">
                             <div class="uk-inline uk-width-1-1">
 								<span class="uk-form-icon" uk-icon="mail"></span>
-								<input id="subcribe" class="uk-input" type="email" placeholder="Your email" required>
-								<label for="subcribe"></label>
+								<input class="uk-input" type="email" placeholder="Your email" required>
 							</div>
                         </div>
                         <div>
