--- a/home.html
+++ b/home.html
@@ -809,7 +809,9 @@
 					<div class="uk-grid-small uk-flex-center" uk-grid>
 						<div class="uk-width-1-1 uk-width-medium@s">
 							<div class="uk-inline uk-width-1-1">
-								<span class="uk-form-icon" uk-icon="mail"></span><input class="uk-input" type="email" placeholder="Your email" required></div>
+								<span class="uk-form-icon" uk-icon="mail"></span>
+								<input class="uk-input" type="email" placeholder="Your email" required>
+							</div>
 						</div>
 						<div>
 							<button class="uk-button uk-button-primary">subscribe</button>
