--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
     
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/lightslider.js" type="text/javascript"></script>
-    <script src="js/lazysizes.min.js" type="text/javascript"></script>
+    <script src="js/lazysizes.min.js" type="text/javascript" async></script>
     <script>
         if ('serviceWorker' in navigator) {
 
