--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
                   <li style="background-color: #ce071e">
                     <a href="#">
                       <figure class="uk-container uk-height-1-1">
-                        <img data-src="images/promo/iphone.jpg" class="lazyload" alt="iPhone" width="1200" height="600" uk-cover>
+                        <img data-src="images/promo/iphone.jpg" class="lazyloaded" alt="iPhone" width="1200" height="600" uk-cover>
                       </figure>
                     </a>
                   </li>
                   <li style="background-color: #1f2024">
                     <a href="#">
                       <figure class="uk-container uk-height-1-1">
-                        <img data-src="images/promo/ipad.jpg" class="lazyload" alt="iPad" width="1200" height="600" uk-cover>
+                        <img data-src="images/promo/ipad.jpg" class="lazyloaded" alt="iPad" width="1200" height="600" uk-cover>
                       </figure>
                     </a>
                   </li>
