--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                             <div class="uk-grid-small" uk-grid>
                                 <div class="uk-width-1-4">
                                     <div class="tm-ratio tm-ratio-4-3">
-                                        <a class="tm-media-box" href="product.html"><figure class="tm-media-box-wrap"><img src="images/products/1/1-small.jpg" alt="Apple MacBook Pro 15&quot; Touch Bar MPTU2LL/A 256GB (Silver)"></figure></a>
+                                        <a class="tm-media-box" href="product.html"><figure class="tm-media-box-wrap"><img data-src="images/products/1/1-small.jpg" class="lazyload" alt="Apple MacBook Pro 15&quot; Touch Bar MPTU2LL/A 256GB (Silver)"></figure></a>
                                     </div>
                                 </div>
                                 <div class="uk-width-expand">
