--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                 <div>
                     <a href="article.html"><article class="uk-card uk-card-default uk-card-small uk-article uk-overflow-hidden uk-box-shadow-hover-large uk-height-1-1 tm-ignore-container">
                     <div class="tm-ratio tm-ratio-16-9">
-                        <figure class="tm-media-box uk-cover-container uk-margin-remove"><img src="images/articles/macbook-photo.jpg" alt="Everything You Need to Know About the MacBook Pro" uk-cover="uk-cover"/></figure>
+                        <figure class="tm-media-box uk-cover-container uk-margin-remove"><img data-src="images/articles/macbook-photo.jpg" class="lazyload" alt="Everything You Need to Know About the MacBook Pro" uk-cover="uk-cover"/></figure>
                     </div>
                     <div class="uk-card-body">
                         <div class="uk-article-body">
@@ -724,7 +724,7 @@
                 <div>
                     <a href="article.html"><article class="uk-card uk-card-default uk-card-small uk-article uk-overflow-hidden uk-box-shadow-hover-large uk-height-1-1 tm-ignore-container">
                     <div class="tm-ratio tm-ratio-16-9">
-                        <figure class="tm-media-box uk-cover-container uk-margin-remove"><img src="images/articles/macos.jpg" alt="Apple introduces macOS Mojave" uk-cover="uk-cover"/></figure>
+                        <figure class="tm-media-box uk-cover-container uk-margin-remove"><img data-src="images/articles/macos.jpg" class="lazyload" alt="Apple introduces macOS Mojave" uk-cover="uk-cover"/></figure>
                     </div>
                     <div class="uk-card-body">
                         <div class="uk-article-body">
@@ -850,7 +850,7 @@
                     <li ng-repeat='mp in marketplace'>
                         <div class="uk-grid-small uk-flex-center uk-flex-left@s" uk-grid>
                             <div class="mkt">
-                                <a class="uk-link-muted tm-media-box" href="#" title="{{mp.title}}"><img src="images/marketplaces/{{mp.src}}.svg" alt="{{mp.alt}}"></a>
+                                <a class="uk-link-muted tm-media-box" href="#" title="{{mp.title}}"><img data-src="images/marketplaces/{{mp.src}}.svg" class="lazyload" alt="{{mp.alt}}"></a>
                             </div>
                             <div class="uk-text-center uk-text-left@s uk-width-expand@s">
                                 <div>Maxi Komputer</div>
@@ -872,7 +872,7 @@
             <div class="uk-container">
                 <div class="uk-grid-medium uk-child-width-1-1 uk-child-width-1-4@m" uk-grid>
                     <div>
-                        <a class="uk-logo" href="home.html"><img src="images/logo-inverse.svg" width="100" alt="Logo"></a>
+                        <a class="uk-logo" href="home.html"><img data-src="images/logo-inverse.svg" class="lazyload" width="100" alt="Logo"></a>
                         <p class="uk-text-small" style="text-align: justify;">
                             {{deskripsi}}
                         </p>
@@ -1081,7 +1081,7 @@
                             <div class="uk-grid-small" uk-grid>
                                 <div class="uk-width-1-4">
                                     <div class="tm-ratio tm-ratio-4-3">
-                                        <a class="tm-media-box" href="product.html"><figure class="tm-media-box-wrap"><img src="images/products/2/2-small.jpg" alt="Apple MacBook 12&quot; MNYN2LL/A 512GB (Rose Gold)"></figure></a>
+                                        <a class="tm-media-box" href="product.html"><figure class="tm-media-box-wrap"><img data-src="images/products/2/2-small.jpg" class="lazyload" alt="Apple MacBook 12&quot; MNYN2LL/A 512GB (Rose Gold)"></figure></a>
                                     </div>
                                 </div>
                                 <div class="uk-width-expand">
