--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                         <!-- start ng-repeat Brands Header -->
                                         <li ng-repeat='br in brands2'>
                                             <div class="tm-ratio tm-ratio-4-3">
-                                                <a class="uk-link-muted uk-text-center uk-display-block uk-padding-small uk-box-shadow-hover-large tm-media-box" href="#" title="{{br.title}}"><figure class="tm-media-box-wrap"><img src="images/brands/{{br.src}}.svg" alt="{{br.alt}}"></figure></a>
+                                                <a class="uk-link-muted uk-text-center uk-display-block uk-padding-small uk-box-shadow-hover-large tm-media-box" href="#" title="{{br.title}}"><figure class="tm-media-box-wrap"><img data-src="images/brands/{{br.src}}.svg" class="lazyload" alt="{{br.alt}}"></figure></a>
                                             </div>
                                         </li>
                                         <!-- end ng-repeat Brands Header -->
