--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="uk-navbar-left">
                     <button class="uk-navbar-toggle uk-hidden@m" aria-label="navbar" uk-toggle="target: #nav-offcanvas" uk-navbar-toggle-icon></button>
                     <a class="uk-navbar-item uk-logo" href="home.html">
-                        <img src="images/logo.svg" width="100" height="32" alt="Logo">
+                        <img data-src="images/logo.svg" width="100" height="32" alt="Logo">
                     </a>
                     <nav class="uk-visible@m">
                     <ul class="uk-navbar-nav">
@@ -243,7 +243,7 @@
                   <li style="background-color: #0b0a12">
                     <a href="#">
                       <figure class="uk-container uk-height-1-1">
-                        <img src="images/promo/macbook-new.jpg" alt="New Macbook" width="1200" height="600" uk-cover>
+                        <img data-src="images/promo/macbook-new.jpg" alt="New Macbook" width="1200" height="600" uk-cover>
                       </figure>
                     </a>
                   </li>
