--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                   <li style="background-color: #0b0a12">
                     <a href="#">
                       <figure class="uk-container uk-height-1-1">
-                        <img data-src="images/promo/macbook-new.jpg" alt="New Macbook" width="1200" height="600" uk-cover>
+                        <img src="images/promo/macbook-new.jpg" alt="New Macbook" width="1200" height="600" uk-cover>
                       </figure>
                     </a>
                   </li>
