--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="uk-navbar-left">
                     <button class="uk-navbar-toggle uk-hidden@m" aria-label="navbar" uk-toggle="target: #nav-offcanvas" uk-navbar-toggle-icon></button>
                     <a class="uk-navbar-item uk-logo" href="home.html">
-                        <img data-src="images/logo.svg" width="100" height="32" alt="Logo">
+                        <img src="images/logo.svg" width="100" height="32" alt="Logo">
                     </a>
                     <nav class="uk-visible@m">
                     <ul class="uk-navbar-nav">
