--- a/index.html
+++ b/index.html
@@ -1131,9 +1131,9 @@
     <script src="js/controller.js" type="text/javascript"></script>
     <!-- End Angular JS -->
     
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript" async></script>
     <script src="js/lightslider.js" type="text/javascript"></script>
-    <script src="js/lazysizes.min.js" type="text/javascript" async></script>
+    
     <script>
         if ('serviceWorker' in navigator) {
 
