--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
     <script src="js/angular.min.js" type="text/javascript"></script>
     <script src="js/controller.js" type="text/javascript"></script>
     <!-- End Angular JS -->
-    
+    <script src="js/lazysizes.min.js" type="text/javascript" async></script>
     <script src="js/script.js" type="text/javascript" async></script>
     <script src="js/lightslider.js" type="text/javascript"></script>
     
