--- a/home.html
+++ b/home.html
@@ -220,6 +220,10 @@
                     <a class="uk-navbar-item uk-link-muted uk-visible@m tm-navbar-button" href="compare.html"><span uk-icon="copy"></span><span class="uk-badge">3</span></a><a class="uk-navbar-item uk-link-muted tm-navbar-button" href="account.html" uk-icon="user"></a>
                     <div class="uk-padding-small uk-margin-remove" uk-dropdown="pos: bottom-right; offset: -10; delay-hide: 200;" style="min-width: 150px;">
                         <ul class="uk-nav uk-dropdown-nav">
+                            <li>
+                                <a><span style="font-weight: 700; color: #ce071e;">Welcome, Kukuh!</span><br></a>
+                            </li>
+                            <li class="uk-nav-divider"></li>
 							<li>
 								<a href="account.html">Orders<span>(2)</span></a>
 							</li>
